--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "pluralize": "1.1.0",
     "font-awesome": "4.2.0",
     "bootstrap": "3.3.0",
-    "string": "2.2.0",
+    "string": "2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "1.3.0"
