--- a/bower.json
+++ b/bower.json
@@ -14,19 +14,20 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3.15",
-    "angular-animate": "1.3.15",
-    "angular-resource": "1.3.15",
-    "angular-route": "1.3.15",
-    "angular-ui-bootstrap": "0.12.0",
-    "angular-i18n": "1.2.15",
-    "angular-translate": "2.0.1",
+    "angular": "1.4.0",
+    "angular-animate": "1.4.0",
+    "angular-i18n": "1.4.0",
+    "angular-resource": "1.4.0",
+    "angular-route": "1.4.0",
+    "angular-bootstrap": "0.13.0",
+    "angular-translate": "2.7.0",
+    "angularjs-toaster": "0.4.14",
     "jquery": "2.1.3",
     "font-awesome": "4.3.0",
     "bootstrap": "3.3.4",
-    "string": "3.1.1"
+    "string.js": "3.1.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.15"
+    "angular-mocks": "1.4.0"
   }
 }
