--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "jquery": "2.1.3",
     "font-awesome": "4.3.0",
     "bootstrap": "3.3.4",
-    "string.js": "3.1.1"
+    "string": "3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.4.0"
