--- a/bower.json
+++ b/bower.json
@@ -22,10 +22,12 @@
     "angular-bootstrap": "0.13.0",
     "angular-translate": "2.7.0",
     "angularjs-toaster": "0.4.14",
-    "jquery": "2.1.3",
-    "font-awesome": "4.3.0",
     "bootstrap": "3.3.4",
-    "string": "3.1.1"
+    "font-awesome": "4.3.0",
+    "jquery": "2.1.3",
+    "ngDialog": "0.4.0",
+    "string": "3.1.1",
+    "abs-chat": "empirefox/angular-bootstrap-simple-chat#593eb35f57e16737ec31402d0fc518b5e9a3e520"
   },
   "devDependencies": {
     "angular-mocks": "1.4.0"
