--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-route": "1.4.0",
     "angular-bootstrap": "0.13.0",
     "angular-translate": "2.7.0",
+    "angular-websocket": "1.0.9",
     "angularjs-toaster": "0.4.14",
     "bootstrap": "3.3.4",
     "font-awesome": "4.3.0",
