--- a/.jshintrc
+++ b/.jshintrc
@@ -85,7 +85,7 @@
         "$",
         "S",
         "pluralize",
-        "KindEditor",
+        "RTCPeerConnection",
         "angularApp"
     ]
 }
