--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "glob": ">=5.0.6",
         "gulp": ">=3.8.11",
         "gulp-angular-builder": ">=0.3.11",
+        "gulp-angular-dependency": "empirefox/gulp-angular-dependency",
         "gulp-angular-filesort": ">=1.1.1",
         "gulp-angular-templatecache": ">=1.6.0",
         "gulp-autoprefixer": ">=2.1.0",
@@ -32,10 +33,10 @@
         "gulp-sourcemaps": ">=1.5.2",
         "gulp-stylus": ">=2.0.1",
         "gulp-uglify": ">=1.2.0",
-        "gulp-util": ">=3.0.4",
+        "gulp-util": ">=3.0.5",
         "jasmine-jquery": ">=2.0.5",
         "jshint-stylish": ">=1.0.1",
-        "karma": ">=0.12.31",
+        "karma": "0.12.35",
         "karma-jasmine": ">=0.3.5",
         "karma-chrome-launcher": ">=0.1.8",
         "karma-firefox-launcher": ">=0.1.4",
