--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-bootstrap": "0.13.0",
     "angular-translate": "2.7.0",
     "angular-websocket": "1.0.9",
+    "angular-ui-tree": "2.5.0",
     "angularjs-toaster": "0.4.14",
     "bootstrap": "3.3.4",
     "font-awesome": "4.3.0",
