--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "gulp-header": ">=1.2.2",
         "gulp-file": ">=0.2.0",
         "gulp-imagemin": ">=0.6.2",
-        "gulp-inject": ">=1.2.0",
+        "gulp-inject": ">=1.3.1",
         "gulp-jshint": ">=1.10.0",
         "gulp-karma": ">=0.0.4",
         "gulp-load-plugins": ">=0.10.0",
@@ -32,6 +32,7 @@
         "gulp-replace": ">=0.4.0",
         "gulp-sourcemaps": ">=1.5.2",
         "gulp-stylus": ">=2.0.1",
+        "gulp-swig": ">=0.7.4",
         "gulp-uglify": ">=1.2.0",
         "gulp-util": ">=3.0.5",
         "jasmine-jquery": ">=2.0.5",
