--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,10 @@
     "angular-resource": "1.4.1",
     "angular-route": "1.4.1",
     "angular-bootstrap": "0.13.0",
+    "angular-moment": "0.10.1",
     "angular-translate": "2.7.2",
     "angular-websocket": "1.0.13",
-    "angular-ui-tree": "2.5.0",
+    "angular-sidenav": "latest",
     "angularjs-toaster": "0.4.14",
     "bootstrap": "3.3.5",
     "font-awesome": "4.3.0",
