--- a/.jshintrc
+++ b/.jshintrc
@@ -80,12 +80,13 @@
         "module",
         "exports",
         "require",
-        "angularSpectrumColorpicker",
+        "AniJS",
         "console",
         "$",
         "S",
         "pluralize",
         "RTCPeerConnection",
-        "angularApp"
+        "ColorfulBackgroundLayer",
+        "ColorfulBackgroundGenerator"
     ]
 }
