--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "jquery": "2.1.4",
     "ngDialog": "0.4.0",
     "string": "3.2.0",
-    "abs-chat": "empirefox/angular-bootstrap-simple-chat#e467de698d0a5596d1e57f7bc51994455a14f601"
+    "abs-chat": "empirefox/angular-bootstrap-simple-chat#e467de698d0a5596d1e57f7bc51994455a14f601",
+    "anijs": "0.9.3"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1"
