--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "del": ">=0.1.1",
     "express": ">=4.10.6",
     "file-reader": ">=0.2.2",
-    "glob": ">=5.0.6",
+    "glob": ">=5.0.13",
     "gulp": ">=3.9.0",
     "gulp-angular-builder": ">=0.3.11",
     "gulp-angular-dependency": "empirefox/gulp-angular-dependency",
@@ -23,6 +23,7 @@
     "gulp-header": ">=1.2.2",
     "gulp-imagemin": ">=0.6.2",
     "gulp-inject": ">=1.3.1",
+    "gulp-inline-source": "^2.0.0",
     "gulp-jshint": ">=1.10.0",
     "gulp-karma": ">=0.0.4",
     "gulp-load-plugins": ">=0.10.0",
