--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,15 @@
   "dependencies": {
     "angular": "1.4.1",
     "angular-animate": "1.4.1",
+    "angular-cookies": "1.4.1",
     "angular-i18n": "1.4.1",
     "angular-resource": "1.4.1",
     "angular-route": "1.4.1",
     "angular-bootstrap": "0.13.0",
     "angular-moment": "0.10.1",
     "angular-translate": "2.7.2",
+    "angular-translate-storage-cookie": "2.7.2",
+    "angular-translate-storage-local": "2.7.2",
     "angular-websocket": "1.0.13",
     "angular-sidenav": "latest",
     "angularjs-toaster": "0.4.14",
