add download page and add client r1pre

--- a/.jshintrc
+++ b/.jshintrc
@@ -84,7 +84,7 @@
         "console",
         "$",
         "S",
-        "pluralize",
+        "detector",
         "RTCPeerConnection",
         "ColorfulBackgroundLayer",
         "ColorfulBackgroundGenerator"
