--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-resource": "1.4.1",
     "angular-route": "1.4.1",
     "angular-bootstrap": "0.13.0",
+    "angular-filter": "0.5.4",
     "angular-moment": "0.10.1",
     "angular-translate": "2.7.2",
     "angular-translate-storage-cookie": "2.7.2",
@@ -37,6 +38,7 @@
     "anijs": "0.9.3"
   },
   "devDependencies": {
-    "angular-mocks": "1.4.1"
+    "angular-mocks": "1.4.1",
+    "Detect.js": "*"
   }
 }
