--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-i18n": "1.4.1",
     "angular-resource": "1.4.1",
     "angular-route": "1.4.1",
+    "angular-sanitize": "1.4.1",
     "angular-bootstrap": "0.13.0",
     "angular-filter": "0.5.4",
     "angular-moment": "0.10.1",
@@ -33,8 +34,11 @@
     "jquery": "2.1.4",
     "ngDialog": "0.4.0",
     "string": "3.2.0",
+    "WebRTC-Experiment": "muaz-khan/WebRTC-Experiment",
     "abs-chat": "empirefox/angular-bootstrap-simple-chat#e467de698d0a5596d1e57f7bc51994455a14f601",
-    "anijs": "0.9.3"
+    "anijs": "0.9.3",
+    "colorful-background-css-generator": "webcore-it/colorful-background-css-generator",
+    "font-diao": "0.0.8"
   },
   "devDependencies": {
     "angular-mocks": "1.4.1",
