--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "string": ">=3.0.0",
     "swig": ">=1.4.2",
     "through2": "^0.6.3",
-    "vinyl-source-stream": ">=0.1.1"
+    "vinyl-source-stream": ">=0.1.1",
+    "yargs": "^3.18.0"
   },
   "engines": {
     "node": ">=0.10.0"
