add common.js;refactor index

--- a/bower.json
+++ b/bower.json
@@ -14,34 +14,35 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.4.1",
-    "angular-animate": "1.4.1",
-    "angular-cookies": "1.4.1",
-    "angular-i18n": "1.4.1",
-    "angular-resource": "1.4.1",
-    "angular-route": "1.4.1",
-    "angular-sanitize": "1.4.1",
-    "angular-bootstrap": "0.13.0",
-    "angular-filter": "0.5.4",
-    "angular-moment": "0.10.1",
+    "angular": "1.4.5",
+    "angular-animate": "1.4.5",
+    "angular-cookies": "1.4.5",
+    "angular-i18n": "1.4.5",
+    "angular-resource": "1.4.5",
+    "angular-route": "1.4.5",
+    "angular-sanitize": "1.4.5",
+    "angular-bootstrap": "0.13.3",
+    "angular-filter": "0.5.5",
+    "angular-loading-bar": "0.8.0",
+    "angular-moment": "0.10.2",
     "angular-translate": "2.7.2",
     "angular-translate-storage-cookie": "2.7.2",
     "angular-translate-storage-local": "2.7.2",
     "angular-websocket": "1.0.13",
-    "angularjs-toaster": "0.4.14",
+    "angularjs-toaster": "0.4.15",
     "bootstrap": "3.3.5",
-    "font-awesome": "4.3.0",
+    "font-awesome": "4.4.0",
+    "font-awesome-animation": "0.0.6",
+    "font-diao": "0.0.8",
     "jquery": "2.1.4",
-    "ngDialog": "0.4.0",
-    "string": "3.2.0",
+    "ngDialog": "0.5.1",
+    "string": "3.3.0",
     "WebRTC-Experiment": "muaz-khan/WebRTC-Experiment",
     "abs-chat": "empirefox/angular-bootstrap-simple-chat#e467de698d0a5596d1e57f7bc51994455a14f601",
-    "anijs": "0.9.3",
-    "colorful-background-css-generator": "webcore-it/colorful-background-css-generator",
-    "font-diao": "0.0.8"
+    "patternbolt": "buseca/patternbolt#gh-pages"
   },
   "devDependencies": {
-    "angular-mocks": "1.4.1",
+    "angular-mocks": "1.4.5",
     "Detect.js": "*"
   }
 }
