--- a/package.json
+++ b/package.json
@@ -1,65 +1,63 @@
 {
   "devDependencies": {
-    "bower": ">=1.4.1",
+    "bower": ">=1.5.2",
     "bower-path": ">=1.0.1",
-    "cdnjs-cdn-data": "^0.1.1",
+    "cdnjs-cdn-data": ">=0.1.2",
     "cheerio": ">=0.18.0",
-    "del": ">=0.1.1",
+    "del": ">=2.0.2",
     "express": ">=4.10.6",
     "file-reader": ">=0.2.2",
-    "glob": ">=5.0.13",
+    "glob": ">=5.0.14",
     "gulp": ">=3.9.0",
-    "gulp-angular-builder": ">=0.3.11",
-    "gulp-angular-dependency": "empirefox/gulp-angular-dependency",
+    "gulp-angular-builder": ">=0.5.2",
+    "gulp-angular-dependency": ">=0.2.1",
     "gulp-angular-filesort": ">=1.1.1",
-    "gulp-angular-templatecache": ">=1.6.0",
-    "gulp-autoprefixer": ">=2.1.0",
-    "gulp-cdnizer": ">=1.1.5",
-    "gulp-changed": ">=0.4.1",
-    "gulp-concat": ">=2.5.2",
+    "gulp-angular-templatecache": ">=1.7.0",
+    "gulp-cdnizer": ">=1.1.6",
+    "gulp-changed": ">=1.3.0",
+    "gulp-concat": ">=2.6.0",
     "gulp-data": ">=1.1.1",
-    "gulp-debug": ">=2.0.1",
+    "gulp-debug": ">=2.1.0",
     "gulp-file": ">=0.2.0",
-    "gulp-header": ">=1.2.2",
+    "gulp-header": ">=1.7.1",
+    "gulp-html-minifier": ">=0.1.6",
     "gulp-imagemin": ">=0.6.2",
-    "gulp-inject": ">=1.3.1",
-    "gulp-inline-source": "^2.0.0",
+    "gulp-inject": ">=1.5.0",
+    "gulp-inline-source": "^2.1.0",
     "gulp-jshint": ">=1.10.0",
     "gulp-karma": ">=0.0.4",
     "gulp-load-plugins": ">=0.10.0",
-    "gulp-ng-constant": ">=0.2.0",
+    "gulp-ng-constant": ">=1.1.0",
     "gulp-notify": ">=1.4.2",
     "gulp-protractor": ">=0.0.12",
     "gulp-rename": ">=1.2.2",
-    "gulp-replace": ">=0.4.0",
+    "gulp-replace": ">=0.5.4",
     "gulp-sourcemaps": ">=1.5.2",
-    "gulp-stylus": ">=2.0.5",
+    "gulp-stylus": ">=2.0.6",
     "gulp-swig": ">=0.7.4",
-    "gulp-uglify": ">=1.2.0",
+    "gulp-uglify": ">=1.4.1",
     "gulp-util": ">=3.0.5",
     "jasmine-jquery": ">=2.0.5",
     "jshint-stylish": ">=1.0.1",
-    "karma": "0.12.36",
+    "karma": ">=0.13.9",
     "karma-chrome-launcher": ">=0.1.12",
     "karma-firefox-launcher": ">=0.1.6",
     "karma-jasmine": ">=0.3.5",
-    "karma-json-fixtures-preprocessor": ">=0.0.1",
+    "karma-json-fixtures-preprocessor": ">=0.0.5",
     "karma-ng-html2js-preprocessor": ">=0.1.2",
-    "karma-phantomjs-launcher": ">=0.2.0",
+    "karma-phantomjs-launcher": ">=0.2.1",
     "karma-spec-reporter": ">=0.0.19",
-    "lazy.js": ">=0.4.0",
+    "lazy.js": ">=0.4.2",
     "nib": ">=1.0.4",
-    "pretty-hrtime": ">=0.2.1",
-    "protractor": ">=2.0.0",
-    "request": ">=2.55.0",
+    "protractor": ">=2.2.0",
+    "request": ">=2.61.0",
     "require-dir": ">=0.3.0",
-    "run-sequence": ">=1.1.0",
-    "streamqueue": ">=1.0.0",
-    "string": ">=3.0.0",
+    "run-sequence": ">=1.1.2",
+    "streamqueue": ">=1.1.1",
+    "string": ">=3.3.1",
     "swig": ">=1.4.2",
-    "through2": "^0.6.3",
     "vinyl-source-stream": ">=0.1.1",
-    "yargs": "^3.18.0"
+    "yargs": ">=3.25.0"
   },
   "engines": {
     "node": ">=0.10.0"
