--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "angular-translate-storage-cookie": "2.7.2",
     "angular-translate-storage-local": "2.7.2",
     "angular-websocket": "1.0.13",
+    "angularjs-toaster": "0.4.15",
     "bootstrap": "3.3.5",
     "font-awesome": "4.4.0",
     "font-awesome-animation": "0.0.6",
@@ -36,7 +37,6 @@
     "jquery": "2.1.4",
     "ngDialog": "0.5.1",
     "string": "3.3.0",
-    "toastr": "2.1.2",
     "WebRTC-Experiment": "muaz-khan/WebRTC-Experiment",
     "abs-chat": "empirefox/angular-bootstrap-simple-chat#e467de698d0a5596d1e57f7bc51994455a14f601",
     "patternbolt": "buseca/patternbolt#gh-pages"
