--- a/bower.json
+++ b/bower.json
@@ -14,35 +14,37 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.4.5",
-    "angular-animate": "1.4.5",
-    "angular-cookies": "1.4.5",
-    "angular-i18n": "1.4.5",
-    "angular-resource": "1.4.5",
-    "angular-route": "1.4.5",
-    "angular-sanitize": "1.4.5",
-    "angular-bootstrap": "0.13.3",
-    "angular-filter": "0.5.5",
+    "angular": "1.4.7",
+    "angular-animate": "1.4.7",
+    "angular-cookies": "1.4.7",
+    "angular-i18n": "1.4.7",
+    "angular-resource": "1.4.7",
+    "angular-route": "1.4.7",
+    "angular-sanitize": "1.4.7",
+    "angular-bootstrap": "0.13.4",
+    "angular-filter": "0.5.7",
     "angular-loading-bar": "0.8.0",
-    "angular-moment": "0.10.2",
-    "angular-translate": "2.7.2",
-    "angular-translate-storage-cookie": "2.7.2",
-    "angular-translate-storage-local": "2.7.2",
+    "angular-moment": "0.10.3",
+    "angular-translate": "2.8.1",
+    "angular-translate-storage-cookie": "2.8.1",
+    "angular-translate-storage-local": "2.8.1",
     "angular-websocket": "1.0.13",
     "angularjs-toaster": "0.4.15",
     "bootstrap": "3.3.5",
+    "bootstrap-social": "4.10.1",
+    "detectrtc": "1.0.9",
     "font-awesome": "4.4.0",
     "font-awesome-animation": "0.0.6",
-    "font-diao": "0.0.8",
     "jquery": "2.1.4",
-    "ngDialog": "0.5.1",
+    "ngDialog": "0.5.5",
+    "satellizer": "0.12.5",
     "string": "3.3.0",
     "WebRTC-Experiment": "muaz-khan/WebRTC-Experiment",
     "abs-chat": "empirefox/angular-bootstrap-simple-chat#e467de698d0a5596d1e57f7bc51994455a14f601",
     "patternbolt": "buseca/patternbolt#gh-pages"
   },
   "devDependencies": {
-    "angular-mocks": "1.4.5",
+    "angular-mocks": "1.4.7",
     "Detect.js": "*"
   }
 }
