--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "gulp": ">=3.9.0",
     "gulp-angular-builder": ">=0.5.2",
     "gulp-angular-dependency": ">=0.2.1",
-    "gulp-angular-filesort": ">=1.1.1",
     "gulp-angular-templatecache": ">=1.7.0",
     "gulp-cdnizer": ">=1.1.6",
     "gulp-changed": ">=1.3.0",
@@ -56,6 +55,7 @@
     "streamqueue": ">=1.1.1",
     "string": ">=3.3.1",
     "swig": ">=1.4.2",
+    "sync-request": ">=2.0.1",
     "vinyl-source-stream": ">=0.1.1",
     "yargs": ">=3.25.0"
   },
