--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-phantomjs-launcher": ">=0.2.1",
     "karma-spec-reporter": ">=0.0.19",
     "lazy.js": ">=0.4.2",
+    "ng-node-compile": "^2.0.52",
     "nib": ">=1.0.4",
     "protractor": ">=2.2.0",
     "request": ">=2.61.0",
