refactor to apprtc; add video.js

--- a/.jshintrc
+++ b/.jshintrc
@@ -84,9 +84,6 @@
         "console",
         "$",
         "S",
-        "detector",
-        "RTCPeerConnection",
-        "ColorfulBackgroundLayer",
-        "ColorfulBackgroundGenerator"
+        "detector"
     ]
 }
