upgrade to new apprtc 1. use server proxy setting 2. update webrtc setting 3. update bower dependencies

--- a/src/scripts/services/apprtc-params.json
+++ b/src/scripts/services/apprtc-params.json
@@ -1,15 +1,16 @@
 {
-    "version_info": "{\"gitHash\": \"56a6925855265c45ecb78ae734ae0384b3ce5e15\", \"branch\": \"checkForGetTracks\", \"time\": \"Tue Sep 29 13:50:40 2015 +0200\"}",
-    "error_messages": [],
-    "bypass_join_confirmation": "false",
-    "media_constraints": "{\"audio\": true, \"video\": true}",
-    "include_loopback_js": "",
-    "turn_url": "https://computeengineondemand.appspot.com/turn?username=577164549&key=4080218913",
-    "is_loopback": "false",
-    "wss_url": "wss://apprtc-ws.webrtc.org:443/ws",
-    "pc_constraints": "{\"optional\": []}",
-    "pc_config": "{\"iceServers\": []}",
-    "wss_post_url": "https://apprtc-ws.webrtc.org:443",
-    "turn_transports": "",
-    "offer_constraints": "{\"optional\": [], \"mandatory\": {}}"
+  "version_info": "{\"gitHash\": \"029b6dc4742cae3bcb6c5ac6a26d65167c522b9f\", \"branch\": \"master\", \"time\": \"Wed Dec 9 16:08:29 2015 +0100\"}",
+  "error_messages": [],
+  "bypass_join_confirmation": "false",
+  "media_constraints": "{\"audio\": true, \"video\": true}",
+  "include_loopback_js": "",
+  "turn_url": "https://computeengineondemand.appspot.com/turn?username=741448572&key=4080218913",
+  "is_loopback": "false",
+  "wss_url": "wss://apprtc-ws.webrtc.org:443/ws",
+  "pc_constraints": "{\"optional\": []}",
+  "pc_config": "{\"rtcpMuxPolicy\": \"require\", \"bundlePolicy\": \"max-bundle\", \"iceServers\": []}",
+  "wss_post_url": "https://apprtc-ws.webrtc.org:443",
+  "offer_options": "{}",
+  "warning_messages": [],
+  "turn_transports": ""
 }
