--- a/bower.json
+++ b/bower.json
@@ -32,11 +32,12 @@
     "angularjs-toaster": "0.4.181",
     "bootstrap": "3.3.6",
     "bootstrap-social": "4.11.0",
-    "detectrtc": "1.2.3",
     "font-awesome": "4.5.0",
     "font-awesome-animation": "0.0.7",
     "jquery": "2.1.4",
     "ngDialog": "0.5.6",
+    "modernizr": "2.8.3",
+    "detectizr": "2.2.0",
     "satellizer": "0.13.3",
     "string": "3.3.1",
     "video.js": "5.4.6",
