--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-jshint": ">=2.0.0",
     "gulp-karma": ">=0.0.4",
     "gulp-load-plugins": ">=1.1.0",
+    "gulp-minify-css": "^1.2.3",
     "gulp-ng-constant": ">=1.1.0",
     "gulp-protractor": ">=2.1.0",
     "gulp-rename": ">=1.2.2",
@@ -55,5 +56,5 @@
   "scripts": {
     "authed-test": "node ./test/server/server.js"
   },
-  "version": "0.2.0-alpha"
+  "version": "0.2.0-beta"
 }
